--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -61,21 +61,12 @@ $date = (date("n/d"));
 if ( $translations ) {
 	require_once "$docroot/plugins/dynamix/include/Translations.php";
 
-	$baseTranslation = "$docroot/languages/{$_SESSION['locale']}/";
-	if ( is_dir($baseTranslation) && $_SESSION['locale'] ) {
-		$translationFile = "$baseTranslation".basename(strtolower($_SERVER['REQUEST_URI'])).".txt";
-		$javascriptFile = "{$baseTranslation}javascript".basename(strtolower($_SERVER['REQUEST_URI'])).".txt";
-
-		if ( ! is_file($javascriptFile) )
-			copy($translationFile,$javascriptFile);
-	}
-	
-/* 	$translationFile = "$docroot/languages/{$_SESSION['locale']}/".basename(strtolower($_SERVER['REQUEST_URI'])).".txt";
+	$translationFile = "$docroot/languages/{$_SESSION['locale']}/".basename(strtolower($_SERVER['REQUEST_URI'])).".txt";
 	$genericFile     = "$docroot/languages/{$_SESSION['locale']}/translations.txt";
 	$pluginTranslations = @parse_lang_file($translationFile);
 	$genericTranslations = @parse_lang_file($genericFile);
 	$pluginTranslations = array_merge(is_array($genericTranslations) ? $genericTranslations : [],is_array($pluginTranslations) ? $pluginTranslations : [] );
-	$language = array_merge($pluginTranslations,$language); */
+	$language = array_merge($pluginTranslations,$language);
 }
 
 function tr($string,$ret=false) {
@@ -98,14 +89,14 @@ function tr($string,$ret=false) {
 
 <script src='<?autov("/plugins/community.applications/javascript/libraries.js")?>'></script>
 <script>
-/* var translationArray = new Array;
+var translationArray = new Array;
 <?
 	if ($translations) {
 		foreach ($pluginTranslations as $english => $translation):?>
 			translationArray.push({english:"<?=$english?>",translation:"<?=$translation?>"});
 		<?endforeach;
 	}
-?> */
+?>
 
 var searchBoxInput;
 var searchBoxAwesomplete;
@@ -1398,19 +1389,19 @@ function feedWarning(currentServer) {
 
 function tr(string) {
 	<?if ( $translations ): ?>
-/* 		var searchString = string.replace(/[?\{\}|&~!\[\]()/:*^."']/g,"");
+		var searchString = string.replace(/[?\{\}|&~!\[\]()/:*^."']/g,"");
 		searchString = searchString.replace(/  +/g, ' ');
 		translationArray.map(function(data) {
 			if (data.english == searchString) {
 				string = data.translation;
 			}
-		}); */
-		return _(string);
+		});
 	<?endif;?>
 	return string;
 }
 
 function CAswitchLanguage(language) {
+	mySpinner();
 	data.searchActive = true; // so the system doesn't resort
 	saveState();
 	$.cookie("ca_languageSwitch","switched",{expires:365,path:'/'});
